# homework_bot

./: .gitignore  README.md  exceptions.py  homework.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_bot.py  utils.py
tests/fixtures/: fixture_data.py
